@@ -197,10 +197,28 @@ Possible values are \"kde\", \"gnome\", \"xfce\", or \"none\".")
        ((member arg '("-q" "--quit"))
 	(throw 'quit 0))
        (t (do-load arg)))))
-  
+
+  (unless batch-mode
+    (add-hook 'before-restart-hook
+      (lambda () (let ((sc (get-window-by-class
+			     "Sawfish-Configurator" #:regex t)))
+		   (when sc
+		     (delete-window-safely sc)
+		     (system "touch ~/.restart_sc &")))))
+
+    (add-hook 'before-exit-hook
+      (lambda () (let ((sc (get-window-by-class
+			     "Sawfish-Configurator" #:regex t)))
+		   (when sc
+		     (delete-window-safely sc)))))
+
+    (when (file-exists-p "~/.restart_sc")
+      (system "sawfish-config &")
+      (delete-file "~/.restart_sc")))
+
+
   (when (eq error-destination 'init)
-    (setq error-destination 'standard-error))
-  )
+    (setq error-destination 'standard-error)))
 
 ;; prevent this file being loaded as a module
 nil
